# BITCQ_Camera

./: CMakeLists.txt  README.md  package.xml
include/: bitcq_camera.h  gmsl_camera.h
launch/: cam_test.launch
lib/Galaxy_Camera/armv7hf/: GxGVTL.cti  GxU3VTL.cti
lib/Galaxy_Camera/armv8/: GxGVTL.cti
lib/Galaxy_Camera/x86/: GxGVTL.cti  GxU3VTL.cti
lib/Galaxy_Camera/x86_64/: GxGVTL.cti
nodes/: bitcq_camera_node.cpp  gmsl_camera_node.cpp
src/: bitcq_camera.cpp  gmsl_camera.cpp
