<package>
  <name>gmsl_camera</name>
  <version>0.0.1</version>

  <description>This package used for publishing camera data.</description>

  <maintainer email="9426224@live.com">9426224</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>

</package>
